--- a/PyJuggler/src/common-targets.mk.in
+++ b/PyJuggler/src/common-targets.mk.in
@@ -41,14 +41,14 @@ ifeq (@OS_TYPE@, Win32)
    CXXFLAGS+=	/Zm800 /GX /GR /Op /DBOOST_PYTHON_DYNAMIC_LIB		\
    		/Zc:wchar_t,forScope
    CXXFLAGS_DBG=/Z7 /Od /Ob0 /MDd /D_DEBUG
-   CXXFLAGS_OPT=/Ogity /O2 /Gs /Ob2 /MD /D_OPT
+   CXXFLAGS_OPT=/Ogity /O2 /Gs /Ob2 /MD /D_OPT /DNDEBUG
    LDFLAGS_DBG=	/DEBUG
    LDFLAGS_OPT=	/RELEASE
    MODEXT_DBG=	_d
    MODEXT_OPT=	
 else
    CXXFLAGS_DBG=-D_DEBUG -g
-   CXXFLAGS_OPT=-D_OPT -O2
+   CXXFLAGS_OPT=-D_OPT -DNDEBUG -O2
    LDFLAGS_DBG=	-g
    LDFLAGS_OPT=	-O2
    MODEXT_DBG=	
