--- a/PyJuggler/examples/cxx/PyAppLoader/Makefile.in
+++ b/PyJuggler/examples/cxx/PyAppLoader/Makefile.in
@@ -33,7 +33,7 @@ ifeq (@OS_TYPE@, Win32)
    CXXFLAGS=	$(shell vrjuggler-config --includes) /Zm800 /GX /GR /Op	\
 		/I$(srcdir) /Zc:wchar_t,forScope $(CXXFLAGS_DBG)
    CXXFLAGS_DBG=/Z7 /Od /Ob0 /MDd /D_DEBUG
-   CXXFLAGS_OPT=/Ogity /O2 /Gs /Ob2 /MD /D_OPT
+   CXXFLAGS_OPT=/Ogity /O2 /Gs /Ob2 /MD /D_OPT /DNDEBUG
    LDFLAGS_DBG=	/DEBUG
    LDFLAGS_OPT=	/RELEASE
    LDFLAGS=	$(LDFLAGS_DBG)
@@ -41,7 +41,7 @@ else
    CXXFLAGS=	$(shell vrjuggler-config --cxxflags) -I$(srcdir)	\
 		$(CXXFLAGS_DBG)
    CXXFLAGS_DBG=-D_DEBUG -g
-   CXXFLAGS_OPT=-D_OPT -O2
+   CXXFLAGS_OPT=-D_OPT -DNDEBUG -O2
    LDFLAGS_DBG=	-g
    LDFLAGS_OPT=	-O2
    LDFLAGS=	-Wl,--export-dynamic $(LDFLAGS_DBG)
