--- a/PyJuggler/pyjutil/Makefile.in
+++ b/PyJuggler/pyjutil/Makefile.in
@@ -47,7 +47,7 @@ ifeq (@OS_TYPE@, Win32)
    CXXFLAGS=	$(shell vpr-config --includes) /Zm800 /GX /GR /Op	\
 		/Zc:wchar_t,forScope
    CXXFLAGS_DBG=/Z7 /Od /Ob0 /MDd /D_DEBUG
-   CXXFLAGS_OPT=/Ogity /O2 /Gs /Ob2 /MD /D_OPT
+   CXXFLAGS_OPT=/Ogity /O2 /Gs /Ob2 /MD /D_OPT /DNDEBUG
    LDFLAGS_DBG=	/DEBUG
    LDFLAGS_OPT=	/RELEASE
    LIBEXT_DBG=	_d
@@ -55,7 +55,7 @@ ifeq (@OS_TYPE@, Win32)
 else
    CXXFLAGS=	$(shell vpr-config --cxxflags)
    CXXFLAGS_DBG=-D_DEBUG -g
-   CXXFLAGS_OPT=-D_OPT -O2
+   CXXFLAGS_OPT=-D_OPT -DNDEBUG -O2
    LDFLAGS_DBG=	-g
    LDFLAGS_OPT=	-O2
    LIBEXT_DBG=	
