Fixed a non-critical Win32 build bug and a style bug.
git-svn-id: https://vrjuggler.googlecode.com/svn/trunk@14877 08b38cba-cd3b-11de-854e-f91c5b6e4272

--- a/PyJuggler/configure.ac
+++ b/PyJuggler/configure.ac
@@ -215,7 +215,7 @@ DPP_LANG_RESTORE
 if test "x$OS_TYPE" = "xWin32" ; then
    PYTHON_LIB="$PYTHON_LIB.lib"
    PYTHON_LIB_OPT="$PYTHON_LIB.lib"
-   PYTHON_LIB_DBG="${PYTHON_LIB_OPT}_d.lib"
+   PYTHON_LIB_DBG="${PYTHON_LIB}_d.lib"
 else
    PYTHON_LIB="-l$PYTHON_LIB"
    PYTHON_LIB_OPT="$PYTHON_LIB"
@@ -252,8 +252,8 @@ if test "x$BOOST_HACKS" = "xyes" -a $boost_minor_ver -ge 31; then
                   toolset='mp'
                   ;;
                Solaris)
-                     toolset='sw'
-               ;;
+                  toolset='sw'
+                  ;;
             esac
          fi
          ;;
