Added missing files from the TestCases subdirectory.  These are only header files, so this is not a critical fix.
git-svn-id: https://vrjuggler.googlecode.com/svn/branches/VRJ_2_0_ALPHA_4_BRANCH/juggler@14884 08b38cba-cd3b-11de-854e-f91c5b6e4272

--- a/modules/vrjuggler/samples/OGL/advanced/navgrab/navgrab.vcproj
+++ b/modules/vrjuggler/samples/OGL/advanced/navgrab/navgrab.vcproj
@@ -145,6 +145,12 @@
 			<File
 				RelativePath="NavGrabApp.h">
 			</File>
+			<File
+				RelativePath="TestCases\FailureTestCase.h">
+			</File>
+			<File
+				RelativePath="TestCases\SphereTestCase.h">
+			</File>
 		</Filter>
 		<Filter
 			Name="Resource Files"
