Oops, I forgot to commit the assignment of a GUID for this project.
git-svn-id: https://vrjuggler.googlecode.com/svn/trunk@14887 08b38cba-cd3b-11de-854e-f91c5b6e4272

--- a/juggler/modules/vrjuggler/samples/OpenSG/simple/OpenSGNav/OpenSGNav.vcproj
+++ b/juggler/modules/vrjuggler/samples/OpenSG/simple/OpenSGNav/OpenSGNav.vcproj
@@ -3,6 +3,7 @@
 	ProjectType="Visual C++"
 	Version="7.00"
 	Name="OpenSGNav"
+	ProjectGUID="{04FF04CD-6A8C-401E-91A3-0E9BE5463A0C}"
 	SccProjectName=""
 	SccLocalPath="">
 	<Platforms>
