Fixed the release build for this application.
git-svn-id: https://vrjuggler.googlecode.com/svn/trunk@14890 08b38cba-cd3b-11de-854e-f91c5b6e4272

--- a/juggler/modules/vrjuggler/test/Draw/OGL/combo/combo.vcproj
+++ b/juggler/modules/vrjuggler/test/Draw/OGL/combo/combo.vcproj
@@ -78,6 +78,7 @@
 			ATLMinimizesCRunTimeLibraryUsage="FALSE">
 			<Tool
 				Name="VCCLCompilerTool"
+				AdditionalOptions="/Zm800"
 				InlineFunctionExpansion="1"
 				OmitFramePointers="FALSE"
 				AdditionalIncludeDirectories=".;..\cubes;..\torus;..\wand;&quot;$(VJ_DEPS_DIR)\include&quot;;&quot;$(VJ_BASE_DIR)\include&quot;"
