Remove the correct symlink when cleaning up omniORB commands.
git-svn-id: https://vrjuggler.googlecode.com/svn/trunk/juggler@14892 08b38cba-cd3b-11de-854e-f91c5b6e4272

--- a/external/Makefile.in
+++ b/external/Makefile.in
@@ -199,7 +199,7 @@ endif
 	-$(RM_LN) $(instlinks)/include/omnithread
 	-$(RM_LN) $(instlinks)/include/omnithread.h
 	@for c in $(OMNIORB_CMDS) ; do					\
-            $(RM_LN) $(instlinks)/$(CXX_ORB_BIN_PATH)/$$c ;		\
+            $(RM_LN) $(instlinks)/bin/$$c ;				\
             $(LN_S) $(CXX_ORB_BIN_DIR)/$$c $(instlinks)/bin/$$c || exit 1; \
           done
 	$(LN_S) $(CXX_ORB_ROOT)/include/$(CXX_ORB_NAME)			\
