Added README.txt as an extra item in the project so that it can be loaded easily from within Visual Studio.
git-svn-id: https://vrjuggler.googlecode.com/svn/trunk@14908 08b38cba-cd3b-11de-854e-f91c5b6e4272

--- a/PyJuggler/examples/cxx/PyAppLoader/pyAppLoader.vcproj
+++ b/PyJuggler/examples/cxx/PyAppLoader/pyAppLoader.vcproj
@@ -158,6 +158,9 @@
 			Name="Resource Files"
 			Filter="ico;cur;bmp;dlg;rc2;rct;bin;rgs;gif;jpg;jpeg;jpe">
 		</Filter>
+		<File
+			RelativePath=".\README.txt">
+		</File>
 	</Files>
 	<Globals>
 	</Globals>
