--- a/PyJuggler/examples/cxx/PyExtApp/extApp.vcproj
+++ b/PyJuggler/examples/cxx/PyExtApp/extApp.vcproj
@@ -164,6 +164,9 @@
 			Name="Resource Files"
 			Filter="ico;cur;bmp;dlg;rc2;rct;bin;rgs;gif;jpg;jpeg;jpe">
 		</Filter>
+		<File
+			RelativePath=".\README.txt">
+		</File>
 	</Files>
 	<Globals>
 	</Globals>
