Use the branch name in the generated version string.
git-svn-id: https://vrjuggler.googlecode.com/svn/branches/VRJ_2_0_ALPHA_4_BRANCH/juggler@14910 08b38cba-cd3b-11de-854e-f91c5b6e4272

--- a/modules/tweek/Makefile.inc.in
+++ b/modules/tweek/Makefile.inc.in
@@ -110,7 +110,7 @@ TWEEK_PROF_LIB_DYNAMIC=	$(TWEEK_LIBRARY)$(PROFLIB_EXT).$(DYNAMICLIB_EXT)
 
 # Version information.
 PARAM_HEADER=	tweek/tweekParam.h
-BRANCH=		HEAD
+BRANCH=		VRJ_2_0_ALPHA_4_BRANCH
 CANON_NAME=	Harbucks Coffee
 VER_ARGS=	-f $(TWEEKROOT_ABS)/VERSION -s @VPR_SUBSYSTEM@		\
 		-b $(BRANCH) -o $(PARAM_HEADER) -n "$(CANON_NAME)"	\
