--- a/modules/jackal/Makefile.inc.in
+++ b/modules/jackal/Makefile.inc.in
@@ -108,7 +108,7 @@ JCCL_PROF_LIB_DYNAMIC=	$(JCCL_LIBRARY)$(PROFLIB_EXT).$(DYNAMICLIB_EXT)
 
 # Version information.
 PARAM_HEADER=	common/jccl/jcclParam.h
-BRANCH=		HEAD
+BRANCH=		VRJ_2_0_ALPHA_4_BRANCH
 CANON_NAME=	Bride of Chucky
 VER_ARGS=	-f $(JCCLROOT_ABS)/VERSION -s @VPR_SUBSYSTEM@		\
 		-b $(BRANCH) -o $(PARAM_HEADER) -n "$(CANON_NAME)"	\
