--- a/modules/sonix/Makefile.inc.in
+++ b/modules/sonix/Makefile.inc.in
@@ -103,7 +103,7 @@ SNX_PROF_LIB_DYNAMIC=	$(SNX_LIBRARY)$(PROFLIB_EXT).$(DYNAMICLIB_EXT)
 
 # Version information.
 PARAM_HEADER=	snx/snxParam.h
-BRANCH=		HEAD
+BRANCH=		VRJ_2_0_ALPHA_4_BRANCH
 CANON_NAME=	Mario
 VER_ARGS=	-f $(ROOT_ABS)/VERSION -s @VPR_SUBSYSTEM@		\
 		-b $(BRANCH) -o $(PARAM_HEADER) 			\
