--- a/modules/vapor/Makefile.inc.in
+++ b/modules/vapor/Makefile.inc.in
@@ -111,7 +111,7 @@ VPR_PROF_LIB_DYNAMIC=	$(VPR_LIBRARY)$(PROFLIB_EXT).$(DYNAMICLIB_EXT)
 
 # Version information.
 PARAM_HEADER=	vpr/vprParam.h
-BRANCH=		HEAD
+BRANCH=		VRJ_2_0_ALPHA_4_BRANCH
 CANON_NAME=	Ring Wraith
 VER_ARGS=	-f $(VPRROOT_ABS)/VERSION -s @SUBSYSTEM@ -b $(BRANCH)	\
 		-i $(VPRROOT_ABS)/vpr/vprParam.h.in -o $(PARAM_HEADER)	\
