--- a/PyJuggler/examples/cxx/PyExtApp/Makefile.in
+++ b/PyJuggler/examples/cxx/PyExtApp/Makefile.in
@@ -34,20 +34,20 @@ top_srcdir=	@top_srcdir@
 ifeq (@OS_TYPE@, Win32)
    CXXFLAGS=	$(shell vrjuggler-config --includes) /Zm800 /GX /GR /Op	\
 		/I$(srcdir) /I$(top_srcdir) /Zc:wchar_t,forScope	\
-		$(CXXFLAGS_DBG)
+		$(CXXFLAGS_OPT)
    CXXFLAGS_DBG=/Z7 /Od /Ob0 /MDd /D_DEBUG
    CXXFLAGS_OPT=/Ogity /O2 /Gs /Ob2 /MD /D_OPT /DNDEBUG
    LDFLAGS_DBG=	/DEBUG
    LDFLAGS_OPT=	/RELEASE
-   LDFLAGS=	$(LDFLAGS_DBG)
+   LDFLAGS=	$(LDFLAGS_OPT)
 else
    CXXFLAGS=	$(shell vrjuggler-config --cxxflags) -I$(srcdir)	\
-		-I$(top_srcdir) $(CXXFLAGS_DBG)
+		-I$(top_srcdir) $(CXXFLAGS_OPT)
    CXXFLAGS_DBG=-D_DEBUG -g
    CXXFLAGS_OPT=-D_OPT -DNDEBUG -O2
    LDFLAGS_DBG=	-g
    LDFLAGS_OPT=	-O2
-   LDFLAGS=	-Wl,--export-dynamic $(LDFLAGS_DBG)
+   LDFLAGS=	-Wl,--export-dynamic $(LDFLAGS_OPT)
 endif
 
 CXX=		@CXX@
@@ -58,13 +58,13 @@ EXTRA_LIBS=	$(shell vrjuggler-config --extra-libs)
 #PYJUTIL_LIB=		-L$(topdir)/lib -lpyjutil
 
 PYTHON_VERSION=		@PYTHON_VERSION@
-PYTHON_LIB=		@PYTHON_LIB_DBG@
-#PYTHON_LIB=		@PYTHON_LIB_OPT@
+#PYTHON_LIB=		@PYTHON_LIB_DBG@
+PYTHON_LIB=		@PYTHON_LIB_OPT@
 PYTHON_LDFLAGS=		@PYTHON_LDFLAGS@ $(PYTHON_LIB) @UTIL_LIB@	\
 			@PYTHON_LIB_DEPS@				\
 			$(NULL)
-BOOST_PYTHON_LDFLAGS=	@BOOST_PYTHON_LDFLAGS_DBG@
-#BOOST_PYTHON_LDFLAGS=	@BOOST_PYTHON_LDFLAGS_OPT@
+#BOOST_PYTHON_LDFLAGS=	@BOOST_PYTHON_LDFLAGS_DBG@
+BOOST_PYTHON_LDFLAGS=	@BOOST_PYTHON_LDFLAGS_OPT@
 
 EXEEXT=		@EXEEXT@
 OBJEXT=		@OBJEXT@
