Manifests are no longer needed for Tweek Beans to be loaded.
git-svn-id: https://vrjuggler.googlecode.com/svn/trunk@14917 08b38cba-cd3b-11de-854e-f91c5b6e4272

--- a/juggler/modules/tweek/test/TestBean/Makefile.in
+++ b/juggler/modules/tweek/test/TestBean/Makefile.in
@@ -26,7 +26,7 @@ all:
 java: $(CLASSES)
 
 TestBean.jar: $(CLASSES)
-	$(JAR) cvfm $@ $(srcdir)/test.MF $(CLASSES)
+	$(JAR) cvf $@ $(CLASSES)
 
 install:
 	cp TestBean.jar $(TWEEK_BASE_DIR)/bin/beans
