--- a/vc7/Sonix/Audiere/Audiere.vcproj
+++ b/vc7/Sonix/Audiere/Audiere.vcproj
@@ -20,7 +20,7 @@
 				Name="VCCLCompilerTool"
 				Optimization="0"
 				AdditionalIncludeDirectories="&quot;$(AUDIERE_ROOT)\include&quot;;&quot;$(NSPR_ROOT)\include&quot;;&quot;$(BOOST_INCLUDES)&quot;;&quot;$(CPPDOM_ROOT)\include&quot;;&quot;$(GMTL_ROOT)\include&quot;;..;..\..\..\modules\vapor;..\..\VPR;..\..\..\modules\sonix;..\..\..\modules\sonix\plugins"
-				PreprocessorDefinitions="WIN32;_DEBUG;_WINDOWS;_USRDLL;_SNX_PLUGIN_BUILD_"
+				PreprocessorDefinitions="WIN32;_DEBUG;_WINDOWS;_USRDLL;_SNX_PLUGIN_BUILD_;NO_SELF_REGISTER"
 				MinimalRebuild="FALSE"
 				BasicRuntimeChecks="3"
 				RuntimeLibrary="3"
@@ -36,13 +36,13 @@
 			<Tool
 				Name="VCLinkerTool"
 				AdditionalDependencies="sonix_d.lib vpr_d.lib audiere.lib libnspr4.lib libplc4.lib $(NOINHERIT)"
-				OutputFile="$(OutDir)/Audiere.dll"
+				OutputFile="$(OutDir)/AudierePlugin.dll"
 				LinkIncremental="1"
 				AdditionalLibraryDirectories="&quot;$(AUDIERE_ROOT)\lib&quot;;&quot;$(NSPR_ROOT)\lib&quot;;&quot;$(BOOST_ROOT)\lib&quot;;&quot;$(CPPDOM_ROOT)\lib\DebugDLL&quot;;..\DebugDLL;..\..\Sonix\DebugDLL;..\..\VPR\DebugDLL"
 				GenerateDebugInformation="TRUE"
-				ProgramDatabaseFile="$(OutDir)/Audiere.pdb"
+				ProgramDatabaseFile="$(OutDir)/AudierePlugin.pdb"
 				SubSystem="2"
-				ImportLibrary="$(OutDir)/Audiere.lib"
+				ImportLibrary="$(OutDir)/AudierePlugin.lib"
 				TargetMachine="1"/>
 			<Tool
 				Name="VCMIDLTool"/>
@@ -71,7 +71,7 @@
 				InlineFunctionExpansion="1"
 				OmitFramePointers="TRUE"
 				AdditionalIncludeDirectories="&quot;$(AUDIERE_ROOT)\include&quot;;&quot;$(NSPR_ROOT)\include&quot;;&quot;$(BOOST_INCLUDES)&quot;;&quot;$(CPPDOM_ROOT)\include&quot;;&quot;$(GMTL_ROOT)\include&quot;;..;..\..\..\modules\vapor;..\..\VPR;..\..\..\modules\sonix;..\..\..\modules\sonix\plugins"
-				PreprocessorDefinitions="WIN32;_OPT;NDEBUG;_WINDOWS;_USRDLL;_SNX_PLUGIN_BUILD_"
+				PreprocessorDefinitions="WIN32;_OPT;NDEBUG;_WINDOWS;_USRDLL;_SNX_PLUGIN_BUILD_;NO_SELF_REGISTER"
 				StringPooling="TRUE"
 				MinimalRebuild="FALSE"
 				RuntimeLibrary="2"
@@ -88,15 +88,15 @@
 			<Tool
 				Name="VCLinkerTool"
 				AdditionalDependencies="sonix.lib vpr.lib audiere.lib libnspr4.lib libplc4.lib $(NOINHERIT)"
-				OutputFile="$(OutDir)/Audiere.dll"
+				OutputFile="$(OutDir)/AudierePlugin.dll"
 				LinkIncremental="1"
 				AdditionalLibraryDirectories="&quot;$(AUDIERE_ROOT)\lib&quot;;&quot;$(NSPR_ROOT)\lib&quot;;&quot;$(BOOST_ROOT)\lib&quot;;&quot;$(CPPDOM_ROOT)\lib\ReleaseDLL&quot;;..\ReleaseDLL;..\..\Sonix\ReleaseDLL;..\..\VPR\ReleaseDLL"
 				GenerateDebugInformation="TRUE"
-				ProgramDatabaseFile="$(OutDir)/Audiere.pdb"
+				ProgramDatabaseFile="$(OutDir)/AudierePlugin.pdb"
 				SubSystem="2"
 				OptimizeReferences="2"
 				EnableCOMDATFolding="2"
-				ImportLibrary="$(OutDir)/Audiere.lib"
+				ImportLibrary="$(OutDir)/AudierePlugin.lib"
 				TargetMachine="1"/>
 			<Tool
 				Name="VCMIDLTool"/>
