--- a/vc7/Gadgeteer/Tweek/Tweek.vcproj
+++ b/vc7/Gadgeteer/Tweek/Tweek.vcproj
@@ -39,7 +39,7 @@
 				AdditionalDependencies="omniORB$(OMNIORB_VERSION)_rtd.lib omnithread30_rtd.lib omniDynamic$(OMNIORB_VERSION)_rtd.lib gadget_d.lib jccl_d.lib tweek_d.lib vpr_d.lib libnspr4.lib libplc4.lib $(NOINHERIT)"
 				OutputFile="$(OutDir)/TweekGadget_drv_d.dll"
 				LinkIncremental="1"
-				AdditionalLibraryDirectories="&quot;$(NSPR_ROOT)\lib&quot;;&quot;$(BOOST_ROOT)\lib&quot;;&quot;$(OMNIORB_ROOT)\lib\x86_win32&quot;;..\DebugDLL;..\..\Tweek_CXX\DebugDLL;..\..\JCCL\DebugDLL;..\..\VPR\DebugDLL"
+				AdditionalLibraryDirectories="&quot;$(NSPR_ROOT)\lib&quot;;&quot;$(BOOST_ROOT)\lib&quot;;&quot;$(OMNIORB_LIB)&quot;;..\DebugDLL;..\..\Tweek_CXX\DebugDLL;..\..\JCCL\DebugDLL;..\..\VPR\DebugDLL"
 				GenerateDebugInformation="TRUE"
 				ProgramDatabaseFile="$(OutDir)/TweekGadget_drv_d.pdb"
 				SubSystem="2"
@@ -52,9 +52,9 @@
 			<Tool
 				Name="VCPreBuildEventTool"
 				Description="Generating C++ code from CORBA IDL..."
-				CommandLine="$(OMNIORB_ROOT)\bin\x86_win32\omniidl -bcxx -Wbh=.h,s=.cpp -I..\..\..\modules\tweek -C. -I..\..\..\modules\gadgeteer\drivers\Open\Tweek ..\..\..\modules\gadgeteer\drivers\Open\Tweek\idl\TweekAnalogSubject.idl
-$(OMNIORB_ROOT)\bin\x86_win32\omniidl -bcxx -Wbh=.h,s=.cpp -I..\..\..\modules\tweek -C. -I..\..\..\modules\gadgeteer\drivers\Open\Tweek ..\..\..\modules\gadgeteer\drivers\Open\Tweek\idl\TweekDigitalSubject.idl
-$(OMNIORB_ROOT)\bin\x86_win32\omniidl -bcxx -Wbh=.h,s=.cpp -I..\..\..\modules\tweek -C. -I..\..\..\modules\gadgeteer\drivers\Open\Tweek ..\..\..\modules\gadgeteer\drivers\Open\Tweek\idl\TweekPositionSubject.idl
+				CommandLine="$(OMNIORB_BIN)\omniidl -bcxx -Wbh=.h,s=.cpp -I..\..\..\modules\tweek -C. -I..\..\..\modules\gadgeteer\drivers\Open\Tweek ..\..\..\modules\gadgeteer\drivers\Open\Tweek\idl\TweekAnalogSubject.idl
+$(OMNIORB_BIN)\omniidl -bcxx -Wbh=.h,s=.cpp -I..\..\..\modules\tweek -C. -I..\..\..\modules\gadgeteer\drivers\Open\Tweek ..\..\..\modules\gadgeteer\drivers\Open\Tweek\idl\TweekDigitalSubject.idl
+$(OMNIORB_BIN)\omniidl -bcxx -Wbh=.h,s=.cpp -I..\..\..\modules\tweek -C. -I..\..\..\modules\gadgeteer\drivers\Open\Tweek ..\..\..\modules\gadgeteer\drivers\Open\Tweek\idl\TweekPositionSubject.idl
 "/>
 			<Tool
 				Name="VCPreLinkEventTool"/>
@@ -96,7 +96,7 @@ $(OMNIORB_ROOT)\bin\x86_win32\omniidl -bcxx -Wbh=.h,s=.cpp -I..\..\..\modules\tw
 				AdditionalDependencies="omniORB$(OMNIORB_VERSION)_rt.lib omnithread30_rt.lib omniDynamic$(OMNIORB_VERSION)_rt.lib gadget.lib jccl.lib tweek.lib vpr.lib libnspr4.lib $(NOINHERIT)"
 				OutputFile="$(OutDir)/TweekGadget_drv.dll"
 				LinkIncremental="1"
-				AdditionalLibraryDirectories="&quot;$(NSPR_ROOT)\lib&quot;;&quot;$(BOOST_ROOT)\lib&quot;;&quot;$(OMNIORB_ROOT)\lib\x86_win32&quot;;..\ReleaseDLL;..\..\Tweek_CXX\ReleaseDLL;..\..\JCCL\ReleaseDLL;..\..\VPR\ReleaseDLL"
+				AdditionalLibraryDirectories="&quot;$(NSPR_ROOT)\lib&quot;;&quot;$(BOOST_ROOT)\lib&quot;;&quot;$(OMNIORB_LIB)&quot;;..\ReleaseDLL;..\..\Tweek_CXX\ReleaseDLL;..\..\JCCL\ReleaseDLL;..\..\VPR\ReleaseDLL"
 				GenerateDebugInformation="TRUE"
 				ProgramDatabaseFile="$(OutDir)/TweekGadget_drv.pdb"
 				SubSystem="2"
@@ -111,9 +111,9 @@ $(OMNIORB_ROOT)\bin\x86_win32\omniidl -bcxx -Wbh=.h,s=.cpp -I..\..\..\modules\tw
 			<Tool
 				Name="VCPreBuildEventTool"
 				Description="Generating C++ code from CORBA IDL..."
-				CommandLine="$(OMNIORB_ROOT)\bin\x86_win32\omniidl -bcxx -Wbh=.h,s=.cpp -I..\..\..\modules\tweek -C. -I..\..\..\modules\gadgeteer\drivers\Open\Tweek ..\..\..\modules\gadgeteer\drivers\Open\Tweek\idl\TweekAnalogSubject.idl
-$(OMNIORB_ROOT)\bin\x86_win32\omniidl -bcxx -Wbh=.h,s=.cpp -I..\..\..\modules\tweek -C. -I..\..\..\modules\gadgeteer\drivers\Open\Tweek ..\..\..\modules\gadgeteer\drivers\Open\Tweek\idl\TweekDigitalSubject.idl
-$(OMNIORB_ROOT)\bin\x86_win32\omniidl -bcxx -Wbh=.h,s=.cpp -I..\..\..\modules\tweek -C. -I..\..\..\modules\gadgeteer\drivers\Open\Tweek ..\..\..\modules\gadgeteer\drivers\Open\Tweek\idl\TweekPositionSubject.idl
+				CommandLine="$(OMNIORB_BIN)\omniidl -bcxx -Wbh=.h,s=.cpp -I..\..\..\modules\tweek -C. -I..\..\..\modules\gadgeteer\drivers\Open\Tweek ..\..\..\modules\gadgeteer\drivers\Open\Tweek\idl\TweekAnalogSubject.idl
+$(OMNIORB_BIN)\omniidl -bcxx -Wbh=.h,s=.cpp -I..\..\..\modules\tweek -C. -I..\..\..\modules\gadgeteer\drivers\Open\Tweek ..\..\..\modules\gadgeteer\drivers\Open\Tweek\idl\TweekDigitalSubject.idl
+$(OMNIORB_BIN)\omniidl -bcxx -Wbh=.h,s=.cpp -I..\..\..\modules\tweek -C. -I..\..\..\modules\gadgeteer\drivers\Open\Tweek ..\..\..\modules\gadgeteer\drivers\Open\Tweek\idl\TweekPositionSubject.idl
 "/>
 			<Tool
 				Name="VCPreLinkEventTool"/>
