--- a/vc7/Sonix/Audiere/Audiere.vcproj
+++ b/vc7/Sonix/Audiere/Audiere.vcproj
@@ -11,7 +11,7 @@
 	</Platforms>
 	<Configurations>
 		<Configuration
-			Name="Debug - DLL|Win32"
+			Name="Debug|Win32"
 			OutputDirectory="DebugDLL"
 			IntermediateDirectory="DebugDLL"
 			ConfigurationType="2"
@@ -60,7 +60,7 @@
 				Name="VCWebDeploymentTool"/>
 		</Configuration>
 		<Configuration
-			Name="Release - DLL|Win32"
+			Name="Release|Win32"
 			OutputDirectory="ReleaseDLL"
 			IntermediateDirectory="ReleaseDLL"
 			ConfigurationType="2"
