--- a/vc7/Tweek_CXX/Tweek_CXX.vcproj
+++ b/vc7/Tweek_CXX/Tweek_CXX.vcproj
@@ -11,7 +11,7 @@
 	</Platforms>
 	<Configurations>
 		<Configuration
-			Name="Debug - DLL|Win32"
+			Name="Debug|Win32"
 			OutputDirectory="DebugDLL"
 			IntermediateDirectory="DebugDLL"
 			ConfigurationType="2"
@@ -68,7 +68,7 @@ $(OMNIORB_BIN)\omniidl -bcxx -Wbh=.h,s=.cpp -Ctweek\CORBA -I../../modules/tweek 
 				Name="VCWebDeploymentTool"/>
 		</Configuration>
 		<Configuration
-			Name="Release - DLL|Win32"
+			Name="Release|Win32"
 			OutputDirectory="ReleaseDLL"
 			IntermediateDirectory="ReleaseDLL"
 			ConfigurationType="2"
