Reduce excessive inlining.
git-svn-id: https://vrjuggler.googlecode.com/svn/trunk@14995 08b38cba-cd3b-11de-854e-f91c5b6e4272

--- a/juggler/modules/vrjuggler/vrj/Draw/OGL/Makefile.in
+++ b/juggler/modules/vrjuggler/vrj/Draw/OGL/Makefile.in
@@ -49,6 +49,7 @@ SUBOBJDIR=	$(GL_LIBRARY)
 
 SRCS=		GlBasicSimulator.cpp		\
 		GlDrawManager.cpp		\
+		GlDrawWandFunctors.cpp		\
 		GlPipe.cpp			\
 		GlSimInterfaceFactory.cpp	\
 		GlWindow.cpp
