Fixed the release build.  I have a feeling that the /ZmXXX option is going to have to be added to all configurations in all projects eventually.
git-svn-id: https://vrjuggler.googlecode.com/svn/trunk@15009 08b38cba-cd3b-11de-854e-f91c5b6e4272

--- a/juggler/vc7/VRJuggler/VRJuggler.vcproj
+++ b/juggler/vc7/VRJuggler/VRJuggler.vcproj
@@ -69,6 +69,7 @@
 			CharacterSet="2">
 			<Tool
 				Name="VCCLCompilerTool"
+				AdditionalOptions="/Zm800"
 				Optimization="2"
 				InlineFunctionExpansion="1"
 				OmitFramePointers="TRUE"
