Add new driver into build system...
git-svn-id: https://vrjuggler.googlecode.com/svn/trunk@15016 08b38cba-cd3b-11de-854e-f91c5b6e4272

--- a/juggler/modules/gadgeteer/drivers/Makefile.in
+++ b/juggler/modules/gadgeteer/drivers/Makefile.in
@@ -147,6 +147,7 @@ SUBDIR=	5DT/DataGlove			\
 	Open/Trackd			\
 	Open/VRPN			\
 	Polhemus/Fastrak		\
+	USDigital/SerialEncoder	        \
 	VRCO/TrackdAPI			\
 	VirtualTechnologies/CyberGlove
 
